# remind-care-fw

./: Cargo.toml  deploy.sh  hardware_api_contract.md  telemed_os.service
Docs/: firmware_guide.md  hardware_api_contract.md
src/: api.rs  hardware.rs  main.rs  models.rs  store.rs
