[package]
name = "telemed_os"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
gpiocdev = { version = "0.8.0", features = ["async_tokio"] }
